old untouched. new same as old by default, or use TL when a sys prop is set
reverted: